--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Archivo movies_dataset.csv  \n",
+    "\n",
     "Transformaciones: Para este MVP no necesitas perfección, ¡necesitas rapidez! ⏩ Vas a hacer estas, y solo estas, transformaciones a los datos:\n",
     "\n",
     "1. Algunos campos, como belongs_to_collection, production_companies y otros (ver diccionario de datos) están anidados, esto es o bien tienen un diccionario o una lista como valores en cada fila,      ¡deberán desanidarlos para poder y unirlos al dataset de nuevo hacer alguna de las consultas de la API! O bien buscar la manera de acceder a esos datos sin desanidarlos.\n",
@@ -966,6 +968,161 @@
     "null_values = movies_df.isnull().sum()\n",
     "\n",
     "null_values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Archivo credits.csv  \n",
+    "  \n",
+    "Ya que el archivo presenta todos sus datos anidados, tendremos que hacer las siguientes transformaciones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Librerías necesarias\n",
+    "import pandas as pd\n",
+    "import ast"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Leer el archivo CSV\n",
+    "credits_df = pd.read_csv('credits.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Eliminar las últimas 40,000 filas\n",
+    "credits_df = credits_df.iloc[:-40000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Desanidar la columna 'cast'\n",
+    "credits_df['cast'] = credits_df['cast'].apply(ast.literal_eval)\n",
+    "\n",
+    "# Desanidar la columna 'crew'\n",
+    "credits_df['crew'] = credits_df['crew'].apply(ast.literal_eval)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Expandir los diccionarios anidados en la columna 'cast'\n",
+    "cast_df = credits_df.explode('cast').reset_index(drop=True)\n",
+    "cast_df = pd.json_normalize(cast_df['cast'])\n",
+    "\n",
+    "# Expandir los diccionarios anidados en la columna 'crew'\n",
+    "crew_df = credits_df.explode('crew').reset_index(drop=True)\n",
+    "crew_df = pd.json_normalize(crew_df['crew'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Agregar la columna 'id' correspondiente al DataFrame 'cast'\n",
+    "cast_df['id'] = credits_df['id'].repeat(credits_df['cast'].apply(len)).reset_index(drop=True)\n",
+    "\n",
+    "# Agregar la columna 'id' correspondiente al DataFrame 'crew'\n",
+    "crew_df['id'] = credits_df['id'].repeat(credits_df['crew'].apply(len)).reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        cast_id                character                 credit_id  gender  \\\n",
+      "0          14.0            Woody (voice)  52fe4284c3a36847f8024f95     2.0   \n",
+      "1          15.0   Buzz Lightyear (voice)  52fe4284c3a36847f8024f99     2.0   \n",
+      "2          16.0  Mr. Potato Head (voice)  52fe4284c3a36847f8024f9d     2.0   \n",
+      "3          17.0       Slinky Dog (voice)  52fe4284c3a36847f8024fa1     2.0   \n",
+      "4          18.0              Rex (voice)  52fe4284c3a36847f8024fa5     2.0   \n",
+      "...         ...                      ...                       ...     ...   \n",
+      "564887      3.0                           52fe4ea59251416c7515d7d9     1.0   \n",
+      "564888      4.0                           52fe4ea59251416c7515d7dd     2.0   \n",
+      "564889      5.0                           52fe4ea59251416c7515d7e1     0.0   \n",
+      "564890      6.0                           52fe4ea59251416c7515d7e5     1.0   \n",
+      "564891      NaN                      NaN                       NaN     NaN   \n",
+      "\n",
+      "           id               name  order                      profile_path  \n",
+      "0       862.0          Tom Hanks    0.0  /pQFoyx7rp09CJTAb932F2g8Nlho.jpg  \n",
+      "1       862.0          Tim Allen    1.0  /uX2xVf6pMmPepxnvFWyBtjexzgY.jpg  \n",
+      "2       862.0        Don Rickles    2.0  /h5BcaDMPRVLHLDzbQavec4xfSdt.jpg  \n",
+      "3       862.0         Jim Varney    3.0  /eIo2jVVXYgjDtaHoF19Ll9vtW7h.jpg  \n",
+      "4       862.0      Wallace Shawn    4.0  /oGE6JqPP2xH4tNORKNqxbNPYi7u.jpg  \n",
+      "...       ...                ...    ...                               ...  \n",
+      "564887    NaN  Nathalie Lissenko    1.0                              None  \n",
+      "564888    NaN       Pavel Pavlov    2.0                              None  \n",
+      "564889    NaN  Aleksandr Chabrov    3.0                              None  \n",
+      "564890    NaN        Vera Orlova    4.0  /n1NXVGNzNxtqsMWxLT1h8GO8Kpi.jpg  \n",
+      "564891    NaN                NaN    NaN                               NaN  \n",
+      "\n",
+      "[564892 rows x 8 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Vista previa para verificar que los datos estén desanidados\n",
+    "print(cast_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    cast_id                       character                 credit_id  gender  \\\n",
+      "10     24.0                Sergeant (voice)  52fe4284c3a36847f8024fb9     2.0   \n",
+      "11     25.0                  Hannah (voice)  52fe4284c3a36847f8024fbd     1.0   \n",
+      "12     27.0            TV Announcer (voice)  52fe4284c3a36847f8024fc5     2.0   \n",
+      "13      1.0                    Alan Parrish  52fe44bfc3a36847f80a7c73     2.0   \n",
+      "14      8.0  Samuel Alan Parrish / Van Pelt  52fe44bfc3a36847f80a7c99     2.0   \n",
+      "\n",
+      "        id            name  order                      profile_path  \n",
+      "10   862.0    R. Lee Ermey   10.0  /r8GBqFBjypLUP9VVqDqfZ7wYbSs.jpg  \n",
+      "11   862.0   Sarah Freeman   11.0                              None  \n",
+      "12   862.0   Penn Jillette   12.0  /zmAaXUdx12NRsssgHbk1T31j2x9.jpg  \n",
+      "13  8844.0  Robin Williams    0.0  /sojtJyIV3lkUeThD7A2oHNm8183.jpg  \n",
+      "14  8844.0   Jonathan Hyde    1.0  /7il5D76vx6QVRVlpVvBPEC40MBi.jpg  \n"
+     ]
+    }
+   ],
+   "source": [
+    "#Verificar que desanida los datos correctamente de la fila 2 de los datos originales\n",
+    "print(cast_df.iloc[10:15])"
    ]
   }
  ],
