--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,14 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Jose Lara\\AppData\\Local\\Temp\\ipykernel_4956\\3493981199.py:3: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Jose Lara\\AppData\\Local\\Temp\\ipykernel_9448\\3493981199.py:3: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  movies_df = pd.read_csv('movies_dataset.csv')\n"
      ]
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
        "4   1995-02-10        1995.0"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +712,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +772,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +959,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -992,27 +992,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                    cast  \\\n",
+      "0      [{'cast_id': 14, 'character': 'Woody (voice)',...   \n",
+      "1      [{'cast_id': 1, 'character': 'Alan Parrish', '...   \n",
+      "2      [{'cast_id': 2, 'character': 'Max Goldman', 'c...   \n",
+      "3      [{'cast_id': 1, 'character': \"Savannah 'Vannah...   \n",
+      "4      [{'cast_id': 1, 'character': 'George Banks', '...   \n",
+      "...                                                  ...   \n",
+      "45471  [{'cast_id': 0, 'character': '', 'credit_id': ...   \n",
+      "45472  [{'cast_id': 1002, 'character': 'Sister Angela...   \n",
+      "45473  [{'cast_id': 6, 'character': 'Emily Shaw', 'cr...   \n",
+      "45474  [{'cast_id': 2, 'character': '', 'credit_id': ...   \n",
+      "45475                                                 []   \n",
+      "\n",
+      "                                                    crew      id  \n",
+      "0      [{'credit_id': '52fe4284c3a36847f8024f49', 'de...     862  \n",
+      "1      [{'credit_id': '52fe44bfc3a36847f80a7cd1', 'de...    8844  \n",
+      "2      [{'credit_id': '52fe466a9251416c75077a89', 'de...   15602  \n",
+      "3      [{'credit_id': '52fe44779251416c91011acb', 'de...   31357  \n",
+      "4      [{'credit_id': '52fe44959251416c75039ed7', 'de...   11862  \n",
+      "...                                                  ...     ...  \n",
+      "45471  [{'credit_id': '5894a97d925141426c00818c', 'de...  439050  \n",
+      "45472  [{'credit_id': '52fe4af1c3a36847f81e9b15', 'de...  111109  \n",
+      "45473  [{'credit_id': '52fe4776c3a368484e0c8387', 'de...   67758  \n",
+      "45474  [{'credit_id': '533bccebc3a36844cf0011a7', 'de...  227506  \n",
+      "45475  [{'credit_id': '593e676c92514105b702e68e', 'de...  461257  \n",
+      "\n",
+      "[45476 rows x 3 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "# Leer el archivo CSV\n",
-    "credits_df = pd.read_csv('credits.csv')"
+    "credits_df = pd.read_csv('credits.csv')\n",
+    "print(credits_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Eliminar las últimas 40,000 filas\n",
-    "credits_df = credits_df.iloc[:-40000]"
+    "# Eliminar las últimas 42,000 filas\n",
+    "credits_df = credits_df.iloc[:-42000]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1025,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1040,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,40 +1088,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        cast_id                character                 credit_id  gender  \\\n",
-      "0          14.0            Woody (voice)  52fe4284c3a36847f8024f95     2.0   \n",
-      "1          15.0   Buzz Lightyear (voice)  52fe4284c3a36847f8024f99     2.0   \n",
-      "2          16.0  Mr. Potato Head (voice)  52fe4284c3a36847f8024f9d     2.0   \n",
-      "3          17.0       Slinky Dog (voice)  52fe4284c3a36847f8024fa1     2.0   \n",
-      "4          18.0              Rex (voice)  52fe4284c3a36847f8024fa5     2.0   \n",
-      "...         ...                      ...                       ...     ...   \n",
-      "564887      3.0                           52fe4ea59251416c7515d7d9     1.0   \n",
-      "564888      4.0                           52fe4ea59251416c7515d7dd     2.0   \n",
-      "564889      5.0                           52fe4ea59251416c7515d7e1     0.0   \n",
-      "564890      6.0                           52fe4ea59251416c7515d7e5     1.0   \n",
-      "564891      NaN                      NaN                       NaN     NaN   \n",
+      "       cast_id                character                 credit_id  gender  \\\n",
+      "0         14.0            Woody (voice)  52fe4284c3a36847f8024f95     2.0   \n",
+      "1         15.0   Buzz Lightyear (voice)  52fe4284c3a36847f8024f99     2.0   \n",
+      "2         16.0  Mr. Potato Head (voice)  52fe4284c3a36847f8024f9d     2.0   \n",
+      "3         17.0       Slinky Dog (voice)  52fe4284c3a36847f8024fa1     2.0   \n",
+      "4         18.0              Rex (voice)  52fe4284c3a36847f8024fa5     2.0   \n",
+      "...        ...                      ...                       ...     ...   \n",
+      "60434      7.0                     Eric  57e710b2c3a368352500a95a     0.0   \n",
+      "60435      8.0                      Liz  57e710bac3a368220e00a606     1.0   \n",
+      "60436      9.0                    Marie  57e710cf925141390b00ae2c     1.0   \n",
+      "60437     10.0                  Bristol  57e710da925141390b00ae31     0.0   \n",
+      "60438     11.0              'Plan' Girl  57e710f2925141395b00ac15     1.0   \n",
       "\n",
-      "           id               name  order                      profile_path  \n",
-      "0       862.0          Tom Hanks    0.0  /pQFoyx7rp09CJTAb932F2g8Nlho.jpg  \n",
-      "1       862.0          Tim Allen    1.0  /uX2xVf6pMmPepxnvFWyBtjexzgY.jpg  \n",
-      "2       862.0        Don Rickles    2.0  /h5BcaDMPRVLHLDzbQavec4xfSdt.jpg  \n",
-      "3       862.0         Jim Varney    3.0  /eIo2jVVXYgjDtaHoF19Ll9vtW7h.jpg  \n",
-      "4       862.0      Wallace Shawn    4.0  /oGE6JqPP2xH4tNORKNqxbNPYi7u.jpg  \n",
-      "...       ...                ...    ...                               ...  \n",
-      "564887    NaN  Nathalie Lissenko    1.0                              None  \n",
-      "564888    NaN       Pavel Pavlov    2.0                              None  \n",
-      "564889    NaN  Aleksandr Chabrov    3.0                              None  \n",
-      "564890    NaN        Vera Orlova    4.0  /n1NXVGNzNxtqsMWxLT1h8GO8Kpi.jpg  \n",
-      "564891    NaN                NaN    NaN                               NaN  \n",
+      "          id              name  order                      profile_path  \n",
+      "0      862.0         Tom Hanks    0.0  /pQFoyx7rp09CJTAb932F2g8Nlho.jpg  \n",
+      "1      862.0         Tim Allen    1.0  /uX2xVf6pMmPepxnvFWyBtjexzgY.jpg  \n",
+      "2      862.0       Don Rickles    2.0  /h5BcaDMPRVLHLDzbQavec4xfSdt.jpg  \n",
+      "3      862.0        Jim Varney    3.0  /eIo2jVVXYgjDtaHoF19Ll9vtW7h.jpg  \n",
+      "4      862.0     Wallace Shawn    4.0  /oGE6JqPP2xH4tNORKNqxbNPYi7u.jpg  \n",
+      "...      ...               ...    ...                               ...  \n",
+      "60434    NaN       Judah Domke    4.0                              None  \n",
+      "60435    NaN     Callie Thorne    5.0  /sTbZc9R8fKHPXDPQXMBdV2xz9C9.jpg  \n",
+      "60436    NaN  Bridget Moynahan    6.0  /sNdD2Cos4aecowtWPpd0hcM8izY.jpg  \n",
+      "60437    NaN        Taryn Reif    7.0                              None  \n",
+      "60438    NaN      Neriah Davis    8.0  /kw8QnfRZu1nPIl52GelfSGdXHaZ.jpg  \n",
       "\n",
-      "[564892 rows x 8 columns]\n"
+      "[60439 rows x 8 columns]\n"
      ]
     }
    ],
@@ -1097,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
