--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -41,7 +41,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Jose Lara\\AppData\\Local\\Temp\\ipykernel_9448\\3493981199.py:3: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\Jose Lara\\AppData\\Local\\Temp\\ipykernel_12776\\3493981199.py:3: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  movies_df = pd.read_csv('movies_dataset.csv')\n"
      ]
     }
@@ -986,8 +986,8 @@
    "outputs": [],
    "source": [
     "#Librerías necesarias\n",
-    "import pandas as pd\n",
-    "import ast"
+    "# import pandas as pd\n",
+    "# import ast"
    ]
   },
   {
@@ -996,48 +996,35 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                                    cast  \\\n",
-      "0      [{'cast_id': 14, 'character': 'Woody (voice)',...   \n",
-      "1      [{'cast_id': 1, 'character': 'Alan Parrish', '...   \n",
-      "2      [{'cast_id': 2, 'character': 'Max Goldman', 'c...   \n",
-      "3      [{'cast_id': 1, 'character': \"Savannah 'Vannah...   \n",
-      "4      [{'cast_id': 1, 'character': 'George Banks', '...   \n",
-      "...                                                  ...   \n",
-      "45471  [{'cast_id': 0, 'character': '', 'credit_id': ...   \n",
-      "45472  [{'cast_id': 1002, 'character': 'Sister Angela...   \n",
-      "45473  [{'cast_id': 6, 'character': 'Emily Shaw', 'cr...   \n",
-      "45474  [{'cast_id': 2, 'character': '', 'credit_id': ...   \n",
-      "45475                                                 []   \n",
-      "\n",
-      "                                                    crew      id  \n",
-      "0      [{'credit_id': '52fe4284c3a36847f8024f49', 'de...     862  \n",
-      "1      [{'credit_id': '52fe44bfc3a36847f80a7cd1', 'de...    8844  \n",
-      "2      [{'credit_id': '52fe466a9251416c75077a89', 'de...   15602  \n",
-      "3      [{'credit_id': '52fe44779251416c91011acb', 'de...   31357  \n",
-      "4      [{'credit_id': '52fe44959251416c75039ed7', 'de...   11862  \n",
-      "...                                                  ...     ...  \n",
-      "45471  [{'credit_id': '5894a97d925141426c00818c', 'de...  439050  \n",
-      "45472  [{'credit_id': '52fe4af1c3a36847f81e9b15', 'de...  111109  \n",
-      "45473  [{'credit_id': '52fe4776c3a368484e0c8387', 'de...   67758  \n",
-      "45474  [{'credit_id': '533bccebc3a36844cf0011a7', 'de...  227506  \n",
-      "45475  [{'credit_id': '593e676c92514105b702e68e', 'de...  461257  \n",
-      "\n",
-      "[45476 rows x 3 columns]\n"
+     "ename": "ParserError",
+     "evalue": "Error tokenizing data. C error: Expected 3 fields in line 193, saw 66\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mParserError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[25], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Leer el archivo CSV\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m credits_df \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_csv\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcredits.csv\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(credits_df\u001b[38;5;241m.\u001b[39mhead())\n",
+      "File \u001b[1;32mc:\\Users\\Jose Lara\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:1026\u001b[0m, in \u001b[0;36mread_csv\u001b[1;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, date_format, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, encoding_errors, dialect, on_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options, dtype_backend)\u001b[0m\n\u001b[0;32m   1013\u001b[0m kwds_defaults \u001b[38;5;241m=\u001b[39m _refine_defaults_read(\n\u001b[0;32m   1014\u001b[0m     dialect,\n\u001b[0;32m   1015\u001b[0m     delimiter,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   1022\u001b[0m     dtype_backend\u001b[38;5;241m=\u001b[39mdtype_backend,\n\u001b[0;32m   1023\u001b[0m )\n\u001b[0;32m   1024\u001b[0m kwds\u001b[38;5;241m.\u001b[39mupdate(kwds_defaults)\n\u001b[1;32m-> 1026\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_read\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilepath_or_buffer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkwds\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\Jose Lara\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:626\u001b[0m, in \u001b[0;36m_read\u001b[1;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[0;32m    623\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m parser\n\u001b[0;32m    625\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m parser:\n\u001b[1;32m--> 626\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mparser\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnrows\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\Jose Lara\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\io\\parsers\\readers.py:1923\u001b[0m, in \u001b[0;36mTextFileReader.read\u001b[1;34m(self, nrows)\u001b[0m\n\u001b[0;32m   1916\u001b[0m nrows \u001b[38;5;241m=\u001b[39m validate_integer(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnrows\u001b[39m\u001b[38;5;124m\"\u001b[39m, nrows)\n\u001b[0;32m   1917\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m   1918\u001b[0m     \u001b[38;5;66;03m# error: \"ParserBase\" has no attribute \"read\"\u001b[39;00m\n\u001b[0;32m   1919\u001b[0m     (\n\u001b[0;32m   1920\u001b[0m         index,\n\u001b[0;32m   1921\u001b[0m         columns,\n\u001b[0;32m   1922\u001b[0m         col_dict,\n\u001b[1;32m-> 1923\u001b[0m     ) \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# type: ignore[attr-defined]\u001b[39;49;00m\n\u001b[0;32m   1924\u001b[0m \u001b[43m        \u001b[49m\u001b[43mnrows\u001b[49m\n\u001b[0;32m   1925\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1926\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m:\n\u001b[0;32m   1927\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mclose()\n",
+      "File \u001b[1;32mc:\\Users\\Jose Lara\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\pandas\\io\\parsers\\c_parser_wrapper.py:234\u001b[0m, in \u001b[0;36mCParserWrapper.read\u001b[1;34m(self, nrows)\u001b[0m\n\u001b[0;32m    232\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m    233\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlow_memory:\n\u001b[1;32m--> 234\u001b[0m         chunks \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_reader\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread_low_memory\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnrows\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    235\u001b[0m         \u001b[38;5;66;03m# destructive to chunks\u001b[39;00m\n\u001b[0;32m    236\u001b[0m         data \u001b[38;5;241m=\u001b[39m _concatenate_chunks(chunks)\n",
+      "File \u001b[1;32mparsers.pyx:838\u001b[0m, in \u001b[0;36mpandas._libs.parsers.TextReader.read_low_memory\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mparsers.pyx:905\u001b[0m, in \u001b[0;36mpandas._libs.parsers.TextReader._read_rows\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mparsers.pyx:874\u001b[0m, in \u001b[0;36mpandas._libs.parsers.TextReader._tokenize_rows\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mparsers.pyx:891\u001b[0m, in \u001b[0;36mpandas._libs.parsers.TextReader._check_tokenize_status\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mparsers.pyx:2061\u001b[0m, in \u001b[0;36mpandas._libs.parsers.raise_parser_error\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mParserError\u001b[0m: Error tokenizing data. C error: Expected 3 fields in line 193, saw 66\n"
      ]
     }
    ],
    "source": [
     "# Leer el archivo CSV\n",
     "credits_df = pd.read_csv('credits.csv')\n",
-    "print(credits_df)"
+    "print(credits_df.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1047,117 +1034,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Desanidar la columna 'cast'\n",
-    "credits_df['cast'] = credits_df['cast'].apply(ast.literal_eval)\n",
+    "def extraer_director(crew_list):\n",
+    "    try:\n",
+    "        list_aux = ast.literal_eval(crew_list)\n",
+    "        for dic in list_aux:\n",
+    "            if dic.get('job') == 'Director':\n",
+    "                return dic.get('name', 'no registrado')\n",
+    "        return 'no registrado'\n",
+    "    except (ValueError, SyntaxError):\n",
+    "        return 'no registrado'\n",
     "\n",
-    "# Desanidar la columna 'crew'\n",
-    "credits_df['crew'] = credits_df['crew'].apply(ast.literal_eval)"
+    "def extraer_cast(cast_list):\n",
+    "    try:\n",
+    "        if cast_list != '[]':\n",
+    "            list_aux = ast.literal_eval(cast_list)\n",
+    "            return ', '.join([dic['name'] for dic in list_aux])\n",
+    "        else:\n",
+    "            return 'no registrado'\n",
+    "    except:\n",
+    "        return 'no registrado'\n",
+    "\n",
+    "credits_df['cast_limpio'] = credits_df['cast'].apply(extraer_cast)\n",
+    "credits_df['director'] = credits_df['crew'].apply(extraer_director)\n",
+    "\n",
+    "credits_df_final = credits_df[['id', 'cast_limpio', 'director']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Expandir los diccionarios anidados en la columna 'cast'\n",
-    "cast_df = credits_df.explode('cast').reset_index(drop=True)\n",
-    "cast_df = pd.json_normalize(cast_df['cast'])\n",
-    "\n",
-    "# Expandir los diccionarios anidados en la columna 'crew'\n",
-    "crew_df = credits_df.explode('crew').reset_index(drop=True)\n",
-    "crew_df = pd.json_normalize(crew_df['crew'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Agregar la columna 'id' correspondiente al DataFrame 'cast'\n",
-    "cast_df['id'] = credits_df['id'].repeat(credits_df['cast'].apply(len)).reset_index(drop=True)\n",
-    "\n",
-    "# Agregar la columna 'id' correspondiente al DataFrame 'crew'\n",
-    "crew_df['id'] = credits_df['id'].repeat(credits_df['crew'].apply(len)).reset_index(drop=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       cast_id                character                 credit_id  gender  \\\n",
-      "0         14.0            Woody (voice)  52fe4284c3a36847f8024f95     2.0   \n",
-      "1         15.0   Buzz Lightyear (voice)  52fe4284c3a36847f8024f99     2.0   \n",
-      "2         16.0  Mr. Potato Head (voice)  52fe4284c3a36847f8024f9d     2.0   \n",
-      "3         17.0       Slinky Dog (voice)  52fe4284c3a36847f8024fa1     2.0   \n",
-      "4         18.0              Rex (voice)  52fe4284c3a36847f8024fa5     2.0   \n",
-      "...        ...                      ...                       ...     ...   \n",
-      "60434      7.0                     Eric  57e710b2c3a368352500a95a     0.0   \n",
-      "60435      8.0                      Liz  57e710bac3a368220e00a606     1.0   \n",
-      "60436      9.0                    Marie  57e710cf925141390b00ae2c     1.0   \n",
-      "60437     10.0                  Bristol  57e710da925141390b00ae31     0.0   \n",
-      "60438     11.0              'Plan' Girl  57e710f2925141395b00ac15     1.0   \n",
+      "         id                                        cast_limpio  \\\n",
+      "0       862  Tom Hanks, Tim Allen, Don Rickles, Jim Varney,...   \n",
+      "1      8844  Robin Williams, Jonathan Hyde, Kirsten Dunst, ...   \n",
+      "2     15602  Walter Matthau, Jack Lemmon, Ann-Margret, Soph...   \n",
+      "3     31357  Whitney Houston, Angela Bassett, Loretta Devin...   \n",
+      "4     11862  Steve Martin, Diane Keaton, Martin Short, Kimb...   \n",
+      "...     ...                                                ...   \n",
+      "3471   5491  John Travolta, Barry Pepper, Forest Whitaker, ...   \n",
+      "3472  10560  Amanda Schull, Zoe Saldana, Susan May Pratt, P...   \n",
+      "3473  19489  Jamie Foxx, Nia Long, Barry Corbin, John Cullu...   \n",
+      "3474  19419  Norm Macdonald, Dave Chappelle, Danny DeVito, ...   \n",
+      "3475  23531  Amanda Peet, Brian Van Holt, Jonathan Abrahams...   \n",
       "\n",
-      "          id              name  order                      profile_path  \n",
-      "0      862.0         Tom Hanks    0.0  /pQFoyx7rp09CJTAb932F2g8Nlho.jpg  \n",
-      "1      862.0         Tim Allen    1.0  /uX2xVf6pMmPepxnvFWyBtjexzgY.jpg  \n",
-      "2      862.0       Don Rickles    2.0  /h5BcaDMPRVLHLDzbQavec4xfSdt.jpg  \n",
-      "3      862.0        Jim Varney    3.0  /eIo2jVVXYgjDtaHoF19Ll9vtW7h.jpg  \n",
-      "4      862.0     Wallace Shawn    4.0  /oGE6JqPP2xH4tNORKNqxbNPYi7u.jpg  \n",
-      "...      ...               ...    ...                               ...  \n",
-      "60434    NaN       Judah Domke    4.0                              None  \n",
-      "60435    NaN     Callie Thorne    5.0  /sTbZc9R8fKHPXDPQXMBdV2xz9C9.jpg  \n",
-      "60436    NaN  Bridget Moynahan    6.0  /sNdD2Cos4aecowtWPpd0hcM8izY.jpg  \n",
-      "60437    NaN        Taryn Reif    7.0                              None  \n",
-      "60438    NaN      Neriah Davis    8.0  /kw8QnfRZu1nPIl52GelfSGdXHaZ.jpg  \n",
+      "             director  \n",
+      "0       John Lasseter  \n",
+      "1        Joe Johnston  \n",
+      "2       Howard Deutch  \n",
+      "3     Forest Whitaker  \n",
+      "4       Charles Shyer  \n",
+      "...               ...  \n",
+      "3471  Roger Christian  \n",
+      "3472  Nicholas Hytner  \n",
+      "3473       Steve Rash  \n",
+      "3474  Scott Alexander  \n",
+      "3475   Peter M. Cohen  \n",
       "\n",
-      "[60439 rows x 8 columns]\n"
+      "[3476 rows x 3 columns]\n"
      ]
     }
    ],
    "source": [
-    "#Vista previa para verificar que los datos estén desanidados\n",
-    "print(cast_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    cast_id                       character                 credit_id  gender  \\\n",
-      "10     24.0                Sergeant (voice)  52fe4284c3a36847f8024fb9     2.0   \n",
-      "11     25.0                  Hannah (voice)  52fe4284c3a36847f8024fbd     1.0   \n",
-      "12     27.0            TV Announcer (voice)  52fe4284c3a36847f8024fc5     2.0   \n",
-      "13      1.0                    Alan Parrish  52fe44bfc3a36847f80a7c73     2.0   \n",
-      "14      8.0  Samuel Alan Parrish / Van Pelt  52fe44bfc3a36847f80a7c99     2.0   \n",
-      "\n",
-      "        id            name  order                      profile_path  \n",
-      "10   862.0    R. Lee Ermey   10.0  /r8GBqFBjypLUP9VVqDqfZ7wYbSs.jpg  \n",
-      "11   862.0   Sarah Freeman   11.0                              None  \n",
-      "12   862.0   Penn Jillette   12.0  /zmAaXUdx12NRsssgHbk1T31j2x9.jpg  \n",
-      "13  8844.0  Robin Williams    0.0  /sojtJyIV3lkUeThD7A2oHNm8183.jpg  \n",
-      "14  8844.0   Jonathan Hyde    1.0  /7il5D76vx6QVRVlpVvBPEC40MBi.jpg  \n"
-     ]
-    }
-   ],
-   "source": [
-    "#Verificar que desanida los datos correctamente de la fila 2 de los datos originales\n",
-    "print(cast_df.iloc[10:15])"
+    "print(credits_df_final)"
    ]
   }
  ],
